--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
-<img src="https://raw.githubusercontent.com/plu/JPSimulatorHacks/master/Data/test.png" alt="test"></p>
-
+<img src="https://raw.githubusercontent.com/plu/JPSimulatorHacks/master/Data/test.png" alt="test">
+<img src="https://www.dropbox.com/s/2sezrx8lnhexpe2/Beach%20Volley_23%20mai%202010.jpg" alt="test">
+</p>
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
