--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Photos</title>
+    <title>Exposition Photo - Ligne 2</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
 
           <h1 id="project_title">Photos</h1>
-          <h2 id="project_tagline">Photographies de Guillaume Lemoine</h2>
+          <h2 id="project_tagline">6 et 7 juin 2015</h2>
 
 
         </header>
@@ -28,12 +28,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Informations Pratiques</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
-<img src="https://raw.githubusercontent.com/plu/JPSimulatorHacks/master/Data/test.png" alt="test">
-<img src="https://www.dropbox.com/s/2sezrx8lnhexpe2/Beach%20Volley_23%20mai%202010.jpg" alt="test">
-</p>
+<p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
+<p>Samedi et Dimanche de 10h à 19h</p>
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
