--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">Photos</h1>
+          <h1 id="project_title">Exposition Photo - Ligne 2</h1>
           <h2 id="project_tagline">6 et 7 juin 2015</h2>
 
 
