add first image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
 <p>Samedi et Dimanche de 10h à 19h</p>
+<img src="../Wagon Rouge_26 fevrier 2010.jpg" alt="Wagon Rouge" style="width:304px;height:228px;">
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
