--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <footer class="inner">
         <p class="copyright">Photos maintained by <a href="https://github.com/glemoine">glemoine</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Twitter : <a href="https://twitter.com/glemoine">@glemoine</p>
       </footer>
     </div>
 
