--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
 <p>Samedi et Dimanche de 10h à 19h</p>
-<img src="./images/affiche.jpg" alt="Wagon Rouge" style="width:600px;height:400px;">
+<img src="./images/affichesmall.jpg" alt="Wagon Rouge" style="width:600px;height:400px;">
 
 
       </section>
@@ -41,8 +41,6 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Photos maintained by <a href="https://github.com/glemoine">glemoine</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
         <p>Twitter : <a href="https://twitter.com/glemoine">@glemoine</p>
       </footer>
     </div>
