--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Photos : Photographies de Guillaume Lemoine">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link href='http://fonts.googleapis.com/css?family=Domine|Raleway:600,800' rel='stylesheet' type='text/css'>
 
     <title>Exposition Photo - Ligne 2</title>
   </head>
