--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <img src="./images/affichesmall.jpg" alt="Wagon Rouge" style="width:600px;height:400px;">
-<p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
+<p>L'Espace Kameleon est heureux d'accueillir pour la deuxième fois Guillaume Lemoine dans le cadre de l'exposition/vente d'une quinzaine de ses photographies.</p>
+<p>Prises entre 2009 et 2015 (et par tous les temps) en France, Italie, Angleterre, et aux Etats-Unis.</p>
 
-        <h3>
-
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Informations Pratiques</h3>
+<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>Informations Pratiques</h3>
 
 <p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
 <p>Samedi et Dimanche de 10h à 19h</p>
