--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <img src="./images/affichesmall.jpg" alt="Wagon Rouge" style="width:600px;height:400px;">
-<p>L'Espace Kameleon est heureux d'accueillir pour la deuxième fois Guillaume Lemoine dans le cadre de l'exposition/vente d'une quinzaine de ses photographies, prises entre 2009 et 2015 (et par tous les temps) en France, Italie, Angleterre et aux Etats-Unis.</p>
+<p>L'Espace Kameleon est heureux d'accueillir pour la deuxième fois Guillaume Lemoine dans le cadre de l'exposition/vente d'une quinzaine de ses photographies, prises entre 2009 et 2015 en France, Italie, Angleterre et aux Etats-Unis.</p>
 
 <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
 <span class="octicon octicon-link"></span></a>Informations Pratiques</h3>
