--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 <img src="./images/affichesmall.jpg" alt="Wagon Rouge" style="width:600px;height:400px;">
-<p>L'espace Kaméléon est heureux de présenter la deuxième exposition personnelle de Guillaume Lemoine. En dehors de toute logique thématique ou géographique, c'est principalement La ligne, la couleur et la lumière qui l'ont amené à sélectionner les photographies de cette exposition. Ces images ont été prises en France, Italie, Angleterre et aux Etats-Unis entre 2009 et 2015.</p>
+<p>L'espace Kaméléon est heureux de présenter la deuxième exposition personnelle de Guillaume Lemoine. En dehors de toute logique thématique ou géographique, c'est principalement la ligne, la couleur et la lumière qui l'ont amené à sélectionner les photographies de cette exposition. Ces images ont été prises en France, Italie, Angleterre et aux Etats-Unis entre 2009 et 2015.</p>
 
 <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
 <span class="octicon octicon-link"></span></a>Informations Pratiques</h3>
