--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 <p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
 <p>Samedi et Dimanche de 10h à 19h</p>
 
+<h3><a id="notes" class="anchor" href="#notes" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>Notes</h3>
+
+<p><sup>1</sup>Aucun animal n'a été blessé lors des prises de vues.</p>
 
       </section>
     </div>
