--- a/galerie.html
+++ b/galerie.html
@@ -132,7 +132,7 @@
                          {"id": "2134192", "largeWidth": "777", "largeHeight": "1200", "exportFilename": "Vue_sur_l_Oce_an-ICA-Boston-Massachusetts-USA-12", "title": "Vue sur l'Océan", "caption" : "Un visiteur du musée d'art contemporain de Boston (ICA)"},
                          {"id": "2764897", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "20100319-_DSC5617-Modifier", "title": "Venise", "caption" : ""},
                          {"id": "2800223", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "Beach_Volley-Plage-Trouville-Normandie-France-35-Modifier", "title": "Beach Volley", "caption" : ""},
-                         {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "_DSC9001-Modifier", "title": "Vassar", "caption" : ""},
+                         {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "DSC9001-Modifier", "title": "Vassar", "caption" : ""},
                          {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "_DSC5785-Modifier", "title": "Santa Monica", "caption" : ""},
                          {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "_DSC0024-Modifier", "title": "Wynn", "caption" : ""},
                          {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Wagon Rouge", "caption" : ""},
