--- a/galerie.html
+++ b/galerie.html
@@ -133,11 +133,11 @@
                          {"id": "2764897", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "20100319-_DSC5617-Modifier", "title": "Venise", "caption" : ""},
                          {"id": "2800223", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "Beach_Volley-Plage-Trouville-Normandie-France-35-Modifier", "title": "Beach Volley", "caption" : ""},
                          {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "DSC9001-Modifier", "title": "Vassar", "caption" : ""},
-                         {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "_DSC5785-Modifier", "title": "Santa Monica", "caption" : ""},
-                         {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "_DSC0024-Modifier", "title": "Wynn", "caption" : ""},
+                         {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "DSC5785-Modifier", "title": "Santa Monica", "caption" : ""},
+                         {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC0024-Modifier", "title": "Wynn", "caption" : ""},
                          {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Wagon Rouge", "caption" : ""},
-                         {"id": "2683737", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "_DSC9111", "title": "Time Square", "caption" : ""},
-                         {"id": "2722336", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "_DSC2572-Modifier", "title": "ernst &amp; young", "caption" : ""},
+                         {"id": "2683737", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "DSC9111", "title": "Time Square", "caption" : ""},
+                         {"id": "2722336", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC2572-Modifier", "title": "ernst &amp; young", "caption" : ""},
                          {"id": "2683594", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "Big_Apple-Times_Square-New-York-New-York-USA-32", "title": "Big Apple", "caption" : ""},
                                     ]        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
