ordre dans la galerie

--- a/galerie.html
+++ b/galerie.html
@@ -19,7 +19,7 @@
             <div class="background"></div>
             <div class="meta-left">
                 <p id="galleryTitle" class="title">Galerie Photos</p>
-                                <p id="galleryAuthor" class="author">by <a id="galleryAuthorURL" href="http://glemoine.github.io/Photos/" target="_blank">Guillaume Lemoine</a></p>
+                                <p id="galleryAuthor" class="author">par <a id="galleryAuthorURL" href="http://glemoine.github.io/Photos/" target="_blank">Guillaume Lemoine</a></p>
                                 </p>
             </div>
             <div class="meta-right">
@@ -115,7 +115,9 @@
         </div>
         <script type="text/javascript">
             var LR = LR || {};
-            LR.images = [                                                                                        {"id": "2133907", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Il_me_reste_des_VHS-Ae_roport-San-Jose-Californie-USA-2", "title": "Il me reste des VHS", "caption" : ""},
+            LR.images = [
+                         {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Ligne 2", "caption" : ""},
+            			 {"id": "2133907", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Il_me_reste_des_VHS-Ae_roport-San-Jose-Californie-USA-2", "title": "Il me reste des VHS", "caption" : ""},
                          {"id": "2133941", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "AA_JFK-Ae_roport-New-York-New-York-USA-3", "title": "AA @ JFK", "caption" : ""},
                          {"id": "2134078", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Question_de_calendrier--Boulogne-Ile_de_France-France-8", "title": "Question de calendrier", "caption" : ""},
                          {"id": "2210679", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "L_ordre_du_jour-Le_Louvre-Paris-Ile_de_France-France-9", "title": "L'ordre du jour", "caption" : ""},
@@ -135,11 +137,11 @@
                          {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "DSC9001-Modifier", "title": "Vassar", "caption" : ""},
                          {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "DSC5785-Modifier", "title": "Santa Monica", "caption" : ""},
                          {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC0024-Modifier", "title": "Wynn", "caption" : ""},
-                         {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Wagon Rouge", "caption" : ""},
                          {"id": "2683737", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "DSC9111", "title": "Time Square", "caption" : ""},
                          {"id": "2722336", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC2572-Modifier", "title": "ernst &amp; young", "caption" : ""},
                          {"id": "2683594", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "Big_Apple-Times_Square-New-York-New-York-USA-32", "title": "Big Apple", "caption" : ""},
-                                    ]        </script>
+                        ]
+        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="assets/js/libs/jquery.velocity.min.js"></script>
