ajout des google fonts

--- a/galerie.html
+++ b/galerie.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css" >
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
+	    <link href='http://fonts.googleapis.com/css?family=Domine|Raleway:300,600,800' rel='stylesheet' type='text/css'>
     </head>
     <body class="has-header row-spacing-md" data-pagination-style="scroll" data-target-row-height="200">
                         <header class="">
@@ -121,8 +122,8 @@
                          {"id": "2133941", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "AA_JFK-Ae_roport-New-York-New-York-USA-3", "title": "AA @ JFK", "caption" : ""},
                          {"id": "2134078", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Question_de_calendrier--Boulogne-Ile_de_France-France-8", "title": "Question de calendrier", "caption" : ""},
                          {"id": "2210679", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "L_ordre_du_jour-Le_Louvre-Paris-Ile_de_France-France-9", "title": "L'ordre du jour", "caption" : ""},
-                         {"id": "2163953", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "Watt-Tuileries-Paris-Ile_de_France-France-14", "title": "Clara Clara", "caption" : "La sculpture de Richard Serra aux jardin des tuileries"},
-                         {"id": "2134496", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "Dinosaur-Natural_History_Museum-Londres-Londres-Royaume-Uni-23", "title": "Dinosaur", "caption" : ""},
+                         {"id": "2163953", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "Watt-Tuileries-Paris-Ile_de_France-France-14", "title": "Clara Clara", "caption" : ""},
+                         {"id": "2134496", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "Dinosaur-Natural_History_Museum-Londres-Londres-Royaume-Uni-23", "title": "Dinosaure", "caption" : ""},
                          {"id": "2134643", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "Continental-Denfert-Rochereau-Paris-Ile_de_France-France-29", "title": "Continental", "caption" : ""},
                          {"id": "2133889", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Lake_Princess-Grand_Hotel-Menaggio-Lombardie-Italie-1", "title": "Lake Princess", "caption" : ""},
                          {"id": "2134791", "largeWidth": "857", "largeHeight": "1200", "exportFilename": "Blocage-Futuroscope-Poitiers-Poitou-France-36", "title": "Blocage", "caption" : ""},
