--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 <p>Espace Kameleon, 185 avenue du maine, 75014 Paris</p>
 <p>Samedi et Dimanche de 10h à 19h</p>
 
+<h3><a id="galerie" class="anchor" href="#galerie" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>Galerie Photo</h3>
+<p>Lien : <a href="http://glemoine.github.io/Photos/photos"></p>
+
 <h3><a id="notes" class="anchor" href="#notes" aria-hidden="true">
 <span class="octicon octicon-link"></span></a>Notes</h3>
 
@@ -50,6 +54,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        <p>E-mail : <a href="mailto:gjplemoine@gmail.com?Subject=Demande%20Info">gjplemoine@gmail.com</p>
         <p>Twitter : <a href="https://twitter.com/glemoine">@glemoine</p>
       </footer>
     </div>
