--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <h3><a id="galerie" class="anchor" href="#galerie" aria-hidden="true">
 <span class="octicon octicon-link"></span></a>Galerie Photo</h3>
-<p>Lien : <a href="http://glemoine.github.io/Photos/photos">Galerie</p>
+<p>Lien : <a href="http://glemoine.github.io/Photos/galerie">Galerie</p>
 
 <h3><a id="notes" class="anchor" href="#notes" aria-hidden="true">
 <span class="octicon octicon-link"></span></a>Notes</h3>
