--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+        <p>Facebook : <a href="https://www.facebook.com/pages/Photos-de-Guillaume-Lemoine/165045041300">Photos-de-Guillaume-Lemoine</p>
         <p>E-mail : <a href="mailto:gjplemoine@gmail.com?Subject=Demande%20Info">gjplemoine@gmail.com</p>
         <p>Twitter : <a href="https://twitter.com/glemoine">@glemoine</p>
       </footer>
