--- a/galerie.html
+++ b/galerie.html
@@ -117,30 +117,30 @@
         <script type="text/javascript">
             var LR = LR || {};
             LR.images = [
-                         {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Ligne 2", "caption" : ""},
-            			 {"id": "2133907", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Il_me_reste_des_VHS-Ae_roport-San-Jose-Californie-USA-2", "title": "Il me reste des VHS", "caption" : ""},
-                         {"id": "2133941", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "AA_JFK-Ae_roport-New-York-New-York-USA-3", "title": "AA @ JFK", "caption" : ""},
-                         {"id": "2134078", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Question_de_calendrier--Boulogne-Ile_de_France-France-8", "title": "Question de calendrier", "caption" : ""},
-                         {"id": "2210679", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "L_ordre_du_jour-Le_Louvre-Paris-Ile_de_France-France-9", "title": "L'ordre du jour", "caption" : ""},
-                         {"id": "2163953", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "Watt-Tuileries-Paris-Ile_de_France-France-14", "title": "Clara Clara", "caption" : ""},
-                         {"id": "2134496", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "Dinosaur-Natural_History_Museum-Londres-Londres-Royaume-Uni-23", "title": "Dinosaure", "caption" : ""},
-                         {"id": "2134643", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "Continental-Denfert-Rochereau-Paris-Ile_de_France-France-29", "title": "Continental", "caption" : ""},
-                         {"id": "2133889", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Lake_Princess-Grand_Hotel-Menaggio-Lombardie-Italie-1", "title": "Lake Princess", "caption" : ""},
-                         {"id": "2134791", "largeWidth": "857", "largeHeight": "1200", "exportFilename": "Blocage-Futuroscope-Poitiers-Poitou-France-36", "title": "Blocage", "caption" : ""},
-                         {"id": "2800182", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "2012_05_20_0071-HDR-Modifier", "title": "Buren", "caption" : ""},
-                         {"id": "2800866", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "20100101-DSC_4535-Modifier", "title": "Jour de Fête 2", "caption" : ""},
-                         {"id": "2496515", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "20090516-_DSC4747-Modifier", "title": "Tate ", "caption" : ""},
-                         {"id": "2747264", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "manegeVenise", "title": "Manege venise", "caption" : ""},
-                         {"id": "1870786", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "20090706-_DSC7242-Modifier", "title": "Escalier de Bramante", "caption" : ""},
-                         {"id": "2134192", "largeWidth": "777", "largeHeight": "1200", "exportFilename": "Vue_sur_l_Oce_an-ICA-Boston-Massachusetts-USA-12", "title": "Vue sur l'Océan", "caption" : "Un visiteur du musée d'art contemporain de Boston (ICA)"},
-                         {"id": "2764897", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "20100319-_DSC5617-Modifier", "title": "Venise", "caption" : ""},
-                         {"id": "2800223", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "Beach_Volley-Plage-Trouville-Normandie-France-35-Modifier", "title": "Beach Volley", "caption" : ""},
-                         {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "DSC9001-Modifier", "title": "Vassar", "caption" : ""},
-                         {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "DSC5785-Modifier", "title": "Santa Monica", "caption" : ""},
-                         {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC0024-Modifier", "title": "Wynn", "caption" : ""},
-                         {"id": "2683737", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "DSC9111", "title": "Time Square", "caption" : ""},
-                         {"id": "2722336", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC2572-Modifier", "title": "ernst &amp; young", "caption" : ""},
-                         {"id": "2683594", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "Big_Apple-Times_Square-New-York-New-York-USA-32", "title": "Big Apple", "caption" : ""},
+                         {"id": "2795217", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "20100226-DSC_5054-Modifier", "title": "Ligne 2", "caption" : "Train Boston-New York | 2010"},
+            			 {"id": "2133907", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Il_me_reste_des_VHS-Ae_roport-San-Jose-Californie-USA-2", "title": "Il me reste des VHS", "caption" : "Aéroport de San-José"},
+                         {"id": "2133941", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "AA_JFK-Ae_roport-New-York-New-York-USA-3", "title": "AA @ JFK", "caption" : "Aéroport de New-York"},
+                         {"id": "2134078", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Question_de_calendrier--Boulogne-Ile_de_France-France-8", "title": "Question de calendrier", "caption" : "Boulogne"},
+                         {"id": "2210679", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "L_ordre_du_jour-Le_Louvre-Paris-Ile_de_France-France-9", "title": "L'ordre du jour", "caption" : "Paris"},
+                         {"id": "2163953", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "Watt-Tuileries-Paris-Ile_de_France-France-14", "title": "Clara Clara", "caption" : "Paris"},
+                         {"id": "2134496", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "Dinosaur-Natural_History_Museum-Londres-Londres-Royaume-Uni-23", "title": "Dinosaure", "caption" : "Londres"},
+                         {"id": "2134643", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "Continental-Denfert-Rochereau-Paris-Ile_de_France-France-29", "title": "Continental", "caption" : "Paris"},
+                         {"id": "2133889", "largeWidth": "1200", "largeHeight": "803", "exportFilename": "Lake_Princess-Grand_Hotel-Menaggio-Lombardie-Italie-1", "title": "Lake Princess", "caption" : "Lac de Côme"},
+                         {"id": "2134791", "largeWidth": "857", "largeHeight": "1200", "exportFilename": "Blocage-Futuroscope-Poitiers-Poitou-France-36", "title": "Blocage", "caption" : "Futuroscope | 2010"},
+                         {"id": "2800182", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "2012_05_20_0071-HDR-Modifier", "title": "Buren", "caption" : "Paris | 2012"},
+                         {"id": "2800866", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "20100101-DSC_4535-Modifier", "title": "Jour de Fête 2", "caption" : "Paris | 2010"},
+                         {"id": "2496515", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "20090516-_DSC4747-Modifier", "title": "Tate ", "caption" : "Londres | 2009"},
+                         {"id": "2747264", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "manegeVenise", "title": "Manege venise", "caption" : "Venise | 2010"},
+                         {"id": "1870786", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "20090706-_DSC7242-Modifier", "title": "Escalier de Bramante", "caption" : "Vatican | 2009"},
+                         {"id": "2134192", "largeWidth": "777", "largeHeight": "1200", "exportFilename": "Vue_sur_l_Oce_an-ICA-Boston-Massachusetts-USA-12", "title": "Vue sur l'Océan", "caption" : "Boston"},
+                         {"id": "2764897", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "20100319-_DSC5617-Modifier", "title": "Venise", "caption" : "Venise | 2010"},
+                         {"id": "2800223", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "Beach_Volley-Plage-Trouville-Normandie-France-35-Modifier", "title": "Beach Volley", "caption" : "Trouville"},
+                         {"id": "2683416", "largeWidth": "800", "largeHeight": "1200", "exportFilename": "DSC9001-Modifier", "title": "Vassar", "caption" : "Boston"},
+                         {"id": "2691081", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "DSC5785-Modifier", "title": "Santa Monica", "caption" : "Santa-Monica"},
+                         {"id": "2684458", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC0024-Modifier", "title": "Wynn", "caption" : "Las-Vegas"},
+                         {"id": "2683737", "largeWidth": "1200", "largeHeight": "799", "exportFilename": "DSC9111", "title": "Time Square", "caption" : "New-York"},
+                         {"id": "2722336", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "DSC2572-Modifier", "title": "ernst &amp; young", "caption" : "New York"},
+                         {"id": "2683594", "largeWidth": "1200", "largeHeight": "798", "exportFilename": "Big_Apple-Times_Square-New-York-New-York-USA-32", "title": "Big Apple", "caption" : "New-York"},
                         ]
         </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
